 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

June 17 2013, Shigio YAMAGUCHI

	Dependence to dbop.c module was eliminated from assoc.c module.

June 12 2013, Shigio YAMAGUCHI

	File 'HTML/sitekey' (--system-cgi option) was removed since it is unnecessary.

December 11 2012, Shigio YAMAGUCHI

	Some automake macros were changed as follows to avoid warning messages.
	o INCLUDES was changed to AM_CPPFLAGS
	o AC_PROG_RANLIB was removed.

December 3 2012, Shigio YAMAGUCHI

	[global/literal.c]
	Included fgrep's code of 4.3BSD.

October 20 2012, Shigio YAMAGUCHI

	Added support for type string of ctags.
	Configure script detects whether ctags has --gtags option or not.
	However, I don't know whether the ctags which has this option will be released.

	Exuberant Ctags with --gtags option:
	$ ctags --gtags -x ...
	D main              320 global/global.c  main(int argc, char **argv)
	R NULL              325 global/global.c  const char *av = NULL;
	=
	^-- Type string (D: definition, R: other than definition)

October 13 2012, Shigio YAMAGUCHI

	Comments were rewritten in the Doxygen style. Submitted by Simon Dommett.
	To generate a document, please invoke make command in the root directory
	of the project like follows:

	$ make doxygen

	doxygen 1.8.2 is required.

June 9 2012, Shigio YAMAGUCHI

	Added BUILD_TOOLS file, which includes the list of version numbers
	of the building tools used for building GLOBAL. It is automatically
	generated by reconf.sh.

March 15 2011, Shigio YAMAGUCHI

	Included cscope's source code.

	[Added source files]		[cscope-15.7]
	m4/check_curses.m4		configure.in
	gtags-cscope/manual.in		doc/cscope.1
	gtags-cscope/alloc.c		src/alloc.c